<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/det_id_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/id"/>

            <TextView
                android:id="@+id/det_text_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/det_text_textView"/>

            <EditText
                android:id="@+id/det_editText_about_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9"
                android:ems="10"
                android:enabled="false"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLength="250"/>

            <ImageView
                android:id="@+id/det_imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="5.70"
                android:contentDescription="@string/det_image"
                app:srcCompat="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/det_textView_select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select__image"/>

            <Button
                android:id="@+id/det_btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/btn_select_image"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <Button
                    android:id="@+id/det_btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:text="@string/btn_save"/>

                <Button
                    android:id="@+id/det_btn_redact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/det_btn_redact"/>

            </LinearLayout>

            <Button
                android:id="@+id/det_btn_del"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/del_cat"/>

            <Button
                android:id="@+id/det_btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.13"
                android:text="@string/btn_back"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
