<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dmitry.catsbankclient.DetailsActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
        >

            <TextView
                android:text="@string/id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/det_id_textView"
                android:layout_weight="0.13"/>

            <TextView
                android:text="@string/det_text_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/det_text_textView"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:lines="6"
                android:id="@+id/det_editText_about_cat"
                android:background="#d9d9d9"
                android:maxLength="250"
                android:enabled="false"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/det_imageView"
                android:contentDescription="@string/det_image"
                android:layout_weight="0.49"
                android:layout_marginTop="5dp"/>

            <TextView
                android:text="@string/select__image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/det_textView_select_image"/>

            <Button
                android:text="@string/btn_select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/det_btn_select_image"
                android:enabled="false"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <Button
                    android:text="@string/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_btn_save"
                    android:layout_weight="1"
                    android:enabled="false"/>

                <Button
                    android:text="@string/det_btn_redact"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/det_btn_redact"
                    android:layout_weight="1"/>
            </LinearLayout>

            <Button
                android:text="@string/btn_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/det_btn_back"
                android:layout_weight="0.13"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
