<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:text="@string/btn_add_new_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_add_cat"
        style="@android:style/Widget.Holo.Light.Button.Inset"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/enter_id"
            android:ems="10"
            android:id="@+id/editText_search"
            android:layout_weight="1"/>

        <Button
            android:text="@string/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_search"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cats_list"
        >
    </TextView>
    <ListView
        android:id="@+id/lvMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </ListView>
</LinearLayout>
