<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_about_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_text_about_cat"
                android:textSize="18sp"/>

            <EditText
                android:id="@+id/editText_about_cat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#d9d9d9"
                android:ems="10"
                android:inputType="textMultiLine"
                android:lines="6"
                android:maxLength="250"/>

            <ImageView
                android:id="@+id/add_imageView"
                android:layout_width="match_parent"
                android:layout_height="202dp"
                app:srcCompat="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/textView_select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select__image"/>

            <Button
                android:id="@+id/btn_select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_select_image"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_save"/>

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_back"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
