<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_new_cat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dmitry.catsbankclient.AddNewCatActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout2">

        <TextView
            android:text="@string/enter_text_about_cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_about_cat"
            android:textSize="18sp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:lines="6"
            android:id="@+id/editText_about_cat"
            android:background="#d9d9d9"
            android:maxLength="250"/>

        <TextView
            android:text="@string/select__image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_select_image"/>

        <Button
            android:text="@string/btn_select_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_select_image"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:text="@string/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save"
            android:layout_weight="1"/>
        <Button
            android:text="@string/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_back"
            android:layout_weight="1"/>

    </LinearLayout>

</RelativeLayout>
